// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogWelcome - Snapshots > matches snapshot when dialog is closed 1`] = `
<div
  data-open="false"
  data-testid="dialog"
>
  <div
    class="sm:max-w-xl"
    data-testid="dialog-content"
  >
    <div
      class="text-left pr-6 gap-0"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Welcome to Pubky!
      </h2>
      <div
        class="font-medium"
        data-testid="dialog-description"
      >
        Your keys, your content, your rules.
      </div>
    </div>
    <div
      class="max-h-[420px] overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex flex-col gap-6"
        data-testid="container"
      >
        <div
          class="self-stretch p-6 bg-card rounded-lg flex flex-col sm:flex-row justify-center sm:justify-start items-center sm:items-start gap-6 overflow-hidden"
          data-testid="card"
        >
          <div
            class="w-24 h-24"
            data-testid="avatar"
          >
            <img
              alt="avatar"
              data-testid="avatar-image"
              src="https://mocked.avatar/test-public-key-12345"
            />
            <div
              class="text-4xl"
              data-testid="avatar-fallback"
            >
              SN
            </div>
          </div>
          <div
            class="flex flex-col justify-center sm:justify-start items-center sm:items-start"
            data-testid="container"
          >
            <p
              data-size="lg"
              data-testid="typography"
            >
              Satoshi Nakamoto
            </p>
            <p
              class="text-center sm:text-left text-muted-foreground font-medium"
              data-size="sm"
              data-testid="typography"
            >
              Authored the Bitcoin white paper, developed Bitcoin, mined first block, disappeared.
            </p>
            <button
              class="rounded-full gap-2 w-fit h-8 mt-2"
              data-testid="button-secondary"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-key w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
                />
                <path
                  d="m21 2-9.6 9.6"
                />
                <circle
                  cx="7.5"
                  cy="15.5"
                  r="5.5"
                />
              </svg>
              test-...12345
            </button>
          </div>
        </div>
        <button
          class="w-auto"
          data-size="lg"
          data-testid="button-default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          Explore Pubky
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogWelcome - Snapshots > matches snapshot with default props 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="sm:max-w-xl"
    data-testid="dialog-content"
  >
    <div
      class="text-left pr-6 gap-0"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Welcome to Pubky!
      </h2>
      <div
        class="font-medium"
        data-testid="dialog-description"
      >
        Your keys, your content, your rules.
      </div>
    </div>
    <div
      class="max-h-[420px] overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex flex-col gap-6"
        data-testid="container"
      >
        <div
          class="self-stretch p-6 bg-card rounded-lg flex flex-col sm:flex-row justify-center sm:justify-start items-center sm:items-start gap-6 overflow-hidden"
          data-testid="card"
        >
          <div
            class="w-24 h-24"
            data-testid="avatar"
          >
            <img
              alt="avatar"
              data-testid="avatar-image"
              src="https://mocked.avatar/test-public-key-12345"
            />
            <div
              class="text-4xl"
              data-testid="avatar-fallback"
            >
              SN
            </div>
          </div>
          <div
            class="flex flex-col justify-center sm:justify-start items-center sm:items-start"
            data-testid="container"
          >
            <p
              data-size="lg"
              data-testid="typography"
            >
              Satoshi Nakamoto
            </p>
            <p
              class="text-center sm:text-left text-muted-foreground font-medium"
              data-size="sm"
              data-testid="typography"
            >
              Authored the Bitcoin white paper, developed Bitcoin, mined first block, disappeared.
            </p>
            <button
              class="rounded-full gap-2 w-fit h-8 mt-2"
              data-testid="button-secondary"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-key w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
                />
                <path
                  d="m21 2-9.6 9.6"
                />
                <circle
                  cx="7.5"
                  cy="15.5"
                  r="5.5"
                />
              </svg>
              test-...12345
            </button>
          </div>
        </div>
        <button
          class="w-auto"
          data-size="lg"
          data-testid="button-default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          Explore Pubky
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogWelcome - Snapshots > matches snapshot with different public key format 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="sm:max-w-xl"
    data-testid="dialog-content"
  >
    <div
      class="text-left pr-6 gap-0"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Welcome to Pubky!
      </h2>
      <div
        class="font-medium"
        data-testid="dialog-description"
      >
        Your keys, your content, your rules.
      </div>
    </div>
    <div
      class="max-h-[420px] overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex flex-col gap-6"
        data-testid="container"
      >
        <div
          class="self-stretch p-6 bg-card rounded-lg flex flex-col sm:flex-row justify-center sm:justify-start items-center sm:items-start gap-6 overflow-hidden"
          data-testid="card"
        >
          <div
            class="w-24 h-24"
            data-testid="avatar"
          >
            <img
              alt="avatar"
              data-testid="avatar-image"
              src="https://mocked.avatar/pk:abc123def456ghi789jkl012mno345pqr678stu901vwx234yz"
            />
            <div
              class="text-4xl"
              data-testid="avatar-fallback"
            >
              SN
            </div>
          </div>
          <div
            class="flex flex-col justify-center sm:justify-start items-center sm:items-start"
            data-testid="container"
          >
            <p
              data-size="lg"
              data-testid="typography"
            >
              Satoshi Nakamoto
            </p>
            <p
              class="text-center sm:text-left text-muted-foreground font-medium"
              data-size="sm"
              data-testid="typography"
            >
              Authored the Bitcoin white paper, developed Bitcoin, mined first block, disappeared.
            </p>
            <button
              class="rounded-full gap-2 w-fit h-8 mt-2"
              data-testid="button-secondary"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-key w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
                />
                <path
                  d="m21 2-9.6 9.6"
                />
                <circle
                  cx="7.5"
                  cy="15.5"
                  r="5.5"
                />
              </svg>
              pk:ab...234yz
            </button>
          </div>
        </div>
        <button
          class="w-auto"
          data-size="lg"
          data-testid="button-default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          Explore Pubky
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogWelcome - Snapshots > matches snapshot with empty name 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="sm:max-w-xl"
    data-testid="dialog-content"
  >
    <div
      class="text-left pr-6 gap-0"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Welcome to Pubky!
      </h2>
      <div
        class="font-medium"
        data-testid="dialog-description"
      >
        Your keys, your content, your rules.
      </div>
    </div>
    <div
      class="max-h-[420px] overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex flex-col gap-6"
        data-testid="container"
      >
        <div
          class="self-stretch p-6 bg-card rounded-lg flex flex-col sm:flex-row justify-center sm:justify-start items-center sm:items-start gap-6 overflow-hidden"
          data-testid="card"
        >
          <div
            class="w-24 h-24"
            data-testid="avatar"
          >
            <img
              alt="avatar"
              data-testid="avatar-image"
              src="https://mocked.avatar/test-public-key-12345"
            />
            <div
              class="text-4xl"
              data-testid="avatar-fallback"
            />
          </div>
          <div
            class="flex flex-col justify-center sm:justify-start items-center sm:items-start"
            data-testid="container"
          >
            <p
              data-size="lg"
              data-testid="typography"
            />
            <p
              class="text-center sm:text-left text-muted-foreground font-medium"
              data-size="sm"
              data-testid="typography"
            >
              Authored the Bitcoin white paper, developed Bitcoin, mined first block, disappeared.
            </p>
            <button
              class="rounded-full gap-2 w-fit h-8 mt-2"
              data-testid="button-secondary"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-key w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
                />
                <path
                  d="m21 2-9.6 9.6"
                />
                <circle
                  cx="7.5"
                  cy="15.5"
                  r="5.5"
                />
              </svg>
              test-...12345
            </button>
          </div>
        </div>
        <button
          class="w-auto"
          data-size="lg"
          data-testid="button-default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          Explore Pubky
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogWelcome - Snapshots > matches snapshot with generated avatar 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="sm:max-w-xl"
    data-testid="dialog-content"
  >
    <div
      class="text-left pr-6 gap-0"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Welcome to Pubky!
      </h2>
      <div
        class="font-medium"
        data-testid="dialog-description"
      >
        Your keys, your content, your rules.
      </div>
    </div>
    <div
      class="max-h-[420px] overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex flex-col gap-6"
        data-testid="container"
      >
        <div
          class="self-stretch p-6 bg-card rounded-lg flex flex-col sm:flex-row justify-center sm:justify-start items-center sm:items-start gap-6 overflow-hidden"
          data-testid="card"
        >
          <div
            class="w-24 h-24"
            data-testid="avatar"
          >
            <img
              alt="avatar"
              data-testid="avatar-image"
              src="https://mocked.avatar/test-public-key-12345"
            />
            <div
              class="text-4xl"
              data-testid="avatar-fallback"
            >
              SN
            </div>
          </div>
          <div
            class="flex flex-col justify-center sm:justify-start items-center sm:items-start"
            data-testid="container"
          >
            <p
              data-size="lg"
              data-testid="typography"
            >
              Satoshi Nakamoto
            </p>
            <p
              class="text-center sm:text-left text-muted-foreground font-medium"
              data-size="sm"
              data-testid="typography"
            >
              Authored the Bitcoin white paper, developed Bitcoin, mined first block, disappeared.
            </p>
            <button
              class="rounded-full gap-2 w-fit h-8 mt-2"
              data-testid="button-secondary"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-key w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
                />
                <path
                  d="m21 2-9.6 9.6"
                />
                <circle
                  cx="7.5"
                  cy="15.5"
                  r="5.5"
                />
              </svg>
              test-...12345
            </button>
          </div>
        </div>
        <button
          class="w-auto"
          data-size="lg"
          data-testid="button-default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          Explore Pubky
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogWelcome - Snapshots > matches snapshot with long bio 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="sm:max-w-xl"
    data-testid="dialog-content"
  >
    <div
      class="text-left pr-6 gap-0"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Welcome to Pubky!
      </h2>
      <div
        class="font-medium"
        data-testid="dialog-description"
      >
        Your keys, your content, your rules.
      </div>
    </div>
    <div
      class="max-h-[420px] overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex flex-col gap-6"
        data-testid="container"
      >
        <div
          class="self-stretch p-6 bg-card rounded-lg flex flex-col sm:flex-row justify-center sm:justify-start items-center sm:items-start gap-6 overflow-hidden"
          data-testid="card"
        >
          <div
            class="w-24 h-24"
            data-testid="avatar"
          >
            <img
              alt="avatar"
              data-testid="avatar-image"
              src="https://mocked.avatar/test-public-key-12345"
            />
            <div
              class="text-4xl"
              data-testid="avatar-fallback"
            >
              SN
            </div>
          </div>
          <div
            class="flex flex-col justify-center sm:justify-start items-center sm:items-start"
            data-testid="container"
          >
            <p
              data-size="lg"
              data-testid="typography"
            >
              Satoshi Nakamoto
            </p>
            <p
              class="text-center sm:text-left text-muted-foreground font-medium"
              data-size="sm"
              data-testid="typography"
            >
              This is a very long bio that should test how the component handles extensive text content and whether it properly wraps and displays within the dialog constraints.
            </p>
            <button
              class="rounded-full gap-2 w-fit h-8 mt-2"
              data-testid="button-secondary"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-key w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
                />
                <path
                  d="m21 2-9.6 9.6"
                />
                <circle
                  cx="7.5"
                  cy="15.5"
                  r="5.5"
                />
              </svg>
              test-...12345
            </button>
          </div>
        </div>
        <button
          class="w-auto"
          data-size="lg"
          data-testid="button-default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          Explore Pubky
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogWelcome - Snapshots > matches snapshot with long name 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="sm:max-w-xl"
    data-testid="dialog-content"
  >
    <div
      class="text-left pr-6 gap-0"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Welcome to Pubky!
      </h2>
      <div
        class="font-medium"
        data-testid="dialog-description"
      >
        Your keys, your content, your rules.
      </div>
    </div>
    <div
      class="max-h-[420px] overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex flex-col gap-6"
        data-testid="container"
      >
        <div
          class="self-stretch p-6 bg-card rounded-lg flex flex-col sm:flex-row justify-center sm:justify-start items-center sm:items-start gap-6 overflow-hidden"
          data-testid="card"
        >
          <div
            class="w-24 h-24"
            data-testid="avatar"
          >
            <img
              alt="avatar"
              data-testid="avatar-image"
              src="https://mocked.avatar/test-public-key-12345"
            />
            <div
              class="text-4xl"
              data-testid="avatar-fallback"
            >
              JD
            </div>
          </div>
          <div
            class="flex flex-col justify-center sm:justify-start items-center sm:items-start"
            data-testid="container"
          >
            <p
              data-size="lg"
              data-testid="typography"
            >
              John Doe Smith Johnson-Baker-Taylor-Jones
            </p>
            <p
              class="text-center sm:text-left text-muted-foreground font-medium"
              data-size="sm"
              data-testid="typography"
            >
              Authored the Bitcoin white paper, developed Bitcoin, mined first block, disappeared.
            </p>
            <button
              class="rounded-full gap-2 w-fit h-8 mt-2"
              data-testid="button-secondary"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-key w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
                />
                <path
                  d="m21 2-9.6 9.6"
                />
                <circle
                  cx="7.5"
                  cy="15.5"
                  r="5.5"
                />
              </svg>
              test-...12345
            </button>
          </div>
        </div>
        <button
          class="w-auto"
          data-size="lg"
          data-testid="button-default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          Explore Pubky
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogWelcome - Snapshots > matches snapshot with minimal props 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="sm:max-w-xl"
    data-testid="dialog-content"
  >
    <div
      class="text-left pr-6 gap-0"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Welcome to Pubky!
      </h2>
      <div
        class="font-medium"
        data-testid="dialog-description"
      >
        Your keys, your content, your rules.
      </div>
    </div>
    <div
      class="max-h-[420px] overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex flex-col gap-6"
        data-testid="container"
      >
        <div
          class="self-stretch p-6 bg-card rounded-lg flex flex-col sm:flex-row justify-center sm:justify-start items-center sm:items-start gap-6 overflow-hidden"
          data-testid="card"
        >
          <div
            class="w-24 h-24"
            data-testid="avatar"
          >
            <img
              alt="avatar"
              data-testid="avatar-image"
              src="https://mocked.avatar/test-key"
            />
            <div
              class="text-4xl"
              data-testid="avatar-fallback"
            >
              TU
            </div>
          </div>
          <div
            class="flex flex-col justify-center sm:justify-start items-center sm:items-start"
            data-testid="container"
          >
            <p
              data-size="lg"
              data-testid="typography"
            >
              Test User
            </p>
            <p
              class="text-center sm:text-left text-muted-foreground font-medium"
              data-size="sm"
              data-testid="typography"
            />
            <button
              class="rounded-full gap-2 w-fit h-8 mt-2"
              data-testid="button-secondary"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-key w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
                />
                <path
                  d="m21 2-9.6 9.6"
                />
                <circle
                  cx="7.5"
                  cy="15.5"
                  r="5.5"
                />
              </svg>
              test-key
            </button>
          </div>
        </div>
        <button
          class="w-auto"
          data-size="lg"
          data-testid="button-default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          Explore Pubky
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogWelcome - Snapshots > matches snapshot with single word name 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="sm:max-w-xl"
    data-testid="dialog-content"
  >
    <div
      class="text-left pr-6 gap-0"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Welcome to Pubky!
      </h2>
      <div
        class="font-medium"
        data-testid="dialog-description"
      >
        Your keys, your content, your rules.
      </div>
    </div>
    <div
      class="max-h-[420px] overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex flex-col gap-6"
        data-testid="container"
      >
        <div
          class="self-stretch p-6 bg-card rounded-lg flex flex-col sm:flex-row justify-center sm:justify-start items-center sm:items-start gap-6 overflow-hidden"
          data-testid="card"
        >
          <div
            class="w-24 h-24"
            data-testid="avatar"
          >
            <img
              alt="avatar"
              data-testid="avatar-image"
              src="https://mocked.avatar/test-public-key-12345"
            />
            <div
              class="text-4xl"
              data-testid="avatar-fallback"
            >
              S
            </div>
          </div>
          <div
            class="flex flex-col justify-center sm:justify-start items-center sm:items-start"
            data-testid="container"
          >
            <p
              data-size="lg"
              data-testid="typography"
            >
              Satoshi
            </p>
            <p
              class="text-center sm:text-left text-muted-foreground font-medium"
              data-size="sm"
              data-testid="typography"
            >
              Authored the Bitcoin white paper, developed Bitcoin, mined first block, disappeared.
            </p>
            <button
              class="rounded-full gap-2 w-fit h-8 mt-2"
              data-testid="button-secondary"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-key w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
                />
                <path
                  d="m21 2-9.6 9.6"
                />
                <circle
                  cx="7.5"
                  cy="15.5"
                  r="5.5"
                />
              </svg>
              test-...12345
            </button>
          </div>
        </div>
        <button
          class="w-auto"
          data-size="lg"
          data-testid="button-default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          Explore Pubky
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogWelcome - Snapshots > matches snapshot without bio 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="sm:max-w-xl"
    data-testid="dialog-content"
  >
    <div
      class="text-left pr-6 gap-0"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Welcome to Pubky!
      </h2>
      <div
        class="font-medium"
        data-testid="dialog-description"
      >
        Your keys, your content, your rules.
      </div>
    </div>
    <div
      class="max-h-[420px] overflow-y-auto"
      data-testid="container"
    >
      <div
        class="flex flex-col gap-6"
        data-testid="container"
      >
        <div
          class="self-stretch p-6 bg-card rounded-lg flex flex-col sm:flex-row justify-center sm:justify-start items-center sm:items-start gap-6 overflow-hidden"
          data-testid="card"
        >
          <div
            class="w-24 h-24"
            data-testid="avatar"
          >
            <img
              alt="avatar"
              data-testid="avatar-image"
              src="https://mocked.avatar/test-public-key-12345"
            />
            <div
              class="text-4xl"
              data-testid="avatar-fallback"
            >
              SN
            </div>
          </div>
          <div
            class="flex flex-col justify-center sm:justify-start items-center sm:items-start"
            data-testid="container"
          >
            <p
              data-size="lg"
              data-testid="typography"
            >
              Satoshi Nakamoto
            </p>
            <p
              class="text-center sm:text-left text-muted-foreground font-medium"
              data-size="sm"
              data-testid="typography"
            />
            <button
              class="rounded-full gap-2 w-fit h-8 mt-2"
              data-testid="button-secondary"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-key w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
                />
                <path
                  d="m21 2-9.6 9.6"
                />
                <circle
                  cx="7.5"
                  cy="15.5"
                  r="5.5"
                />
              </svg>
              test-...12345
            </button>
          </div>
        </div>
        <button
          class="w-auto"
          data-size="lg"
          data-testid="button-default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          Explore Pubky
        </button>
      </div>
    </div>
  </div>
</div>
`;
